# solstone-tmux

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  Makefile  README.md  pyproject.toml
contrib/: solstone-tmux.service
src/solstone_tmux/: __init__.py  capture.py  cli.py  config.py  indicator.py  install_guard.py  observer.py  recovery.py  streams.py  sync.py  upload.py
src/solstone_tmux/contrib/: solstone-tmux.service.in
tests/: test_capture.py  test_cli.py  test_config.py  test_indicator.py  test_install_guard.py  test_streams.py  test_sync.py
